--- a/CarRefuelTracker.UI/Views/AddFuelTypeView.xaml
+++ b/CarRefuelTracker.UI/Views/AddFuelTypeView.xaml
@@ -11,8 +11,8 @@
         <StackPanel Orientation="Vertical">
             <TextBlock Text="Kraftstoffart hinzufügen" FontSize="30" VerticalAlignment="Center" HorizontalAlignment="Center"/>
             <DockPanel Margin="20" VerticalAlignment="Center">
-                <TextBlock Margin="0,0,15,0" VerticalAlignment="Center" Text="Kraftstoffart: " FontSize="26"/>
-                <TextBox Height="25" x:Name="FuelTypeName" VerticalContentAlignment="Center" VerticalAlignment="Center"/>
+                <TextBlock Margin="0,0,15,0" VerticalAlignment="Center" Text="Kraftstoffart: " FontSize="20"/>
+                <TextBox Height="25" FontSize="20" x:Name="FuelTypeName" VerticalContentAlignment="Center" VerticalAlignment="Center"/>
             </DockPanel>
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,60,0,0">
                 <Button x:Name="Cancel" Content="Abbrechen" Margin="0,0,15,0"/>
