--- a/CarRefuelTracker.UI/Views/DashboardEntryView.xaml
+++ b/CarRefuelTracker.UI/Views/DashboardEntryView.xaml
@@ -8,7 +8,7 @@
               d:DesignHeight="450" d:DesignWidth="800" Background="LightBlue">
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="*"/>
+            <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
         <StackPanel Orientation="Vertical" Grid.Row="0">
@@ -17,25 +17,25 @@
                        HorizontalAlignment="Center" 
                        FontSize="20"/>
             <DataGrid Margin="5,0,5,0"
-                          ItemsSource="{Binding Path=CarEntrys}"
+                          ItemsSource="{Binding Path=CarEntrys, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}"
                           AutoGenerateColumns="False" CanUserAddRows="False" CanUserResizeColumns="False" 
-                          CanUserResizeRows="False" SelectedItem="{Binding Path=SelectedEntryModel, Mode=TwoWay}" 
-                          SelectionMode="Single" CanUserSortColumns="False">
+                          CanUserResizeRows="False" SelectedItem="{Binding Path=SelectedEntryModel, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" 
+                          SelectionMode="Single" CanUserSortColumns="False" IsSynchronizedWithCurrentItem="True">
                 <DataGrid.Columns>
-                    <DataGridTextColumn Header=" Datum " IsReadOnly="True" Binding="{Binding Entrydate}"/>
+                    <DataGridTextColumn Header=" Datum " IsReadOnly="True" Binding="{Binding EntryDate}" SortDirection="Descending"/>
                     <DataGridTextColumn Header=" Preis pro Liter in € " IsReadOnly="True" Binding="{Binding PricePerLiter}"/>
                     <DataGridTextColumn Header=" Abgabemenge in Liter " IsReadOnly="True" Binding="{Binding AmountOffuel}"/>
-                    <DataGridTextColumn Header=" Gesasmtkosten in € " IsReadOnly="True" Binding="{Binding Totalamount}"/>
+                    <DataGridTextColumn Header=" Gesasmtkosten in € " IsReadOnly="True" Binding="{Binding TotalAmount}"/>
                     <DataGridTextColumn Header=" Gefahrene Kiolometer " IsReadOnly="True" Binding="{Binding DrivenDistance}"/>
                     <DataGridTextColumn Header=" Ø Verbrauch / 100km " IsReadOnly="True" Binding="{Binding ConsumptationPerHundredKilometer}"/>
                     <DataGridTextColumn Header=" Ø Kosten / 100km" IsReadOnly="True" Binding="{Binding CostPerHundredKilometer}"/>
                 </DataGrid.Columns>
             </DataGrid>
         </StackPanel>
-        <StackPanel Grid.Row="1" Orientation="Horizontal">
-            <Button Height="25" Content="Eintrag anlegen" Margin="10,5,0,5"/>
-            <Button Height="25" Content="Eintrag ändern" Margin="10,5,0,5"/>
-            <Button Height="25" Content="Eintrag löschen" Margin="10,5,0,5"/>
+        <StackPanel Grid.Row="1" Orientation="Horizontal" VerticalAlignment="Bottom" Margin="0,20,0,0">
+            <Button Height="25" x:Name="AddEntry" Content="Eintrag anlegen" Margin="10,5,0,5"/>
+            <Button Height="25" x:Name="EditEntry" Content="Eintrag ändern" Margin="10,5,0,5"/>
+            <Button Height="25" x:Name="DeleteEntry" Content="Eintrag löschen" Margin="10,5,0,5"/>
         </StackPanel>
     </Grid>
 </UserControl>
