--- a/CarRefuelTracker.UI/Views/EntryDetailsView.xaml
+++ b/CarRefuelTracker.UI/Views/EntryDetailsView.xaml
@@ -4,7 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:CarRefuelTracker.UI.Views"
-             mc:Ignorable="d" Width="548" Height="248">
+             mc:Ignorable="d" Width="548" Height="248" BorderBrush="Black" BorderThickness="2">
     <Grid>
         <StackPanel Orientation="Vertical" Margin="20">
             <StackPanel Orientation="Horizontal" Margin="0,0,0,10">
