--- a/CarRefuelTracker.UI/Views/DashboardView.xaml
+++ b/CarRefuelTracker.UI/Views/DashboardView.xaml
@@ -10,7 +10,7 @@
         <Grid>
             <Grid.RowDefinitions>
                 <RowDefinition Height="10"/>
-                    <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="Auto"/>
@@ -23,13 +23,14 @@
                 <ColumnDefinition Width="10" />
                 <ColumnDefinition Width="Auto"/>
                 <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition Width="Auto"/>
                 <ColumnDefinition Width="2*"/>
                 <ColumnDefinition Width="Auto"/>
                 <ColumnDefinition Width="10" />
 
             </Grid.ColumnDefinitions>
 
-            <StackPanel Grid.Row="1" Grid.Column="1" Grid.RowSpan="3" Orientation="Vertical">
+            <StackPanel Grid.Row="1" Grid.Column="1" Grid.RowSpan="3" Orientation="Vertical" Grid.ColumnSpan="2">
                 <Label Content="Angelegte Fahrzeuge" 
                    VerticalAlignment="Center" 
                    HorizontalAlignment="Center" 
@@ -48,21 +49,21 @@
                 </DataGrid>
             </StackPanel>
 
-            <StackPanel x:Name="SelectedEntryViewModelIsVisible" Grid.Row="5" Grid.Column="1" Grid.ColumnSpan="3 " >
+            <StackPanel x:Name="SelectedEntryViewModelIsVisible" Grid.Row="5" Grid.Column="1" Grid.ColumnSpan="4" >
                 <ContentControl x:Name="SelectedEntryViewModel" Margin="0,10,0,0"/>
             </StackPanel>
 
-            <StackPanel Grid.Row="1" Grid.Column="2" Grid.RowSpan="3">
+            <StackPanel Grid.Row="1" Grid.Column="3" Grid.RowSpan="3">
                 <Button x:Name="CreateNewCar" Height="25" Content="Fahrzeug anlegen" Margin="10,35,0,0"/>
                 <Button x:Name="EditCar" Height="25" Content="Fahrzeug ändern" Margin="10,5,0,0"/>
                 <Button x:Name="DeleteCar" Height="25" Content="Fahrzeug löschen" Margin="10,5,0,0" />
             </StackPanel>
 
             <StackPanel Margin="10,10,10,0" x:Name="SelectedCreateCarViewModelIsVisible" 
-                        Grid.Row="1" Grid.Column="3" Grid.RowSpan="3">
+                        Grid.Row="1" Grid.Column="4" Grid.RowSpan="3">
                 <ContentControl x:Name="CarDetailsViewModel" Margin="5,5,0,0"/>
             </StackPanel>
-            <ContentControl Grid.Row="4" Grid.Column="4"/>
+            <ContentControl Grid.Row="4" Grid.Column="6" Margin="0,0,10,10" Grid.RowSpan="2"/>
         </Grid>
         <Button x:Name="Exit" Width="100" Height="25" 
                 Background="DarkRed" Foreground="AliceBlue" 
