--- a/CarRefuelTracker.UI/Views/DashboardView.xaml
+++ b/CarRefuelTracker.UI/Views/DashboardView.xaml
@@ -50,7 +50,7 @@
             </StackPanel>
 
             <StackPanel x:Name="SelectedEntryViewModelIsVisible" Grid.Row="5" Grid.Column="1" Grid.ColumnSpan="4" >
-                <ContentControl x:Name="SelectedEntryViewModel" Margin="0,10,0,0"/>
+                <ContentControl x:Name="SelectedCarEntryViewModel" Margin="0,10,0,0"/>
             </StackPanel>
 
             <StackPanel Grid.Row="1" Grid.Column="3" Grid.RowSpan="3">
